--- a/index.html
+++ b/index.html
@@ -10,150 +10,175 @@
 </head>
 
 <body>
-   <main class="container">
-      <!-- Header -->
-      <section class="header">
-         <section class="profile">
-            <picture class="avatar">
-               <img src="./img/avatar.png" alt="fotografia">
-            </picture>
-            <h2 class="name">Rickert Luis<br>Gonzales Ramírez</h2>
-            <picture class="flag">
-               <img src="./img/bandera.png" alt="bandera">
-            </picture>
-            <p class="email">rickertgonzales@gmail.com</p>
-         </section>
-         <section class="text">
-            <p>“Amo el café, me ecanta el diseño y el desarrollo frontend”</p>
-         </section>
-         <section class="technology">
-            <ul>
-               <li class="figma">
-                  <picture>
-                     <img src="./img/figma.png" alt="logo figma">
-                  </picture>
-                  <p>Figma</p>
-               </li>
-               <li class="adobexd">
-                  <picture>
-                     <img src="./img/adobexd.png" alt="logo adobexd">
-                  </picture>
-                  <p>Adobe XD</p>
-               </li>
-               <li class="uxui">
-                  <picture>
-                     <img src="./img/uxui.png" alt="logo uxui">
-                  </picture>
-                  <p>UX/UI Designer</p>
-               </li>
-               <li class="javascript">
-                  <picture>
-                     <img src="./img/javascript.png" alt="logo javascript">
-                  </picture>
-                  <p>Javascript</p>
-               </li>
-               <li class="react">
-                  <picture>
-                     <img src="./img/react.png" alt="logo react">
-                  </picture>
-                  <p>React</p>
-               </li>
-               <li class="kotlin">
-                  <picture>
-                     <img src="./img/kotlin.png" alt="logo kotli">
-                  </picture>
-                  <p>Kotlin</p>
-               </li>
-            </ul>
+   <section class="conte">
+      <section class="container">
+         <!-- Header -->
+         <section class="header">
+            <section class="profile">
+               <picture class="avatar">
+                  <img src="./img/avatar.png" alt="fotografia">
+               </picture>
+               <h2 class="name">Rickert Luis Gonzales<br>Ramírez</h2>
+               <picture class="flag">
+                  <img src="./img/bandera.png" alt="bandera">
+               </picture>
+               <p class="email">rickertgonzales@gmail.com</p>
+            </section>
+            <section class="text">
+               <p>“Amo el café, me ecanta el diseño y el desarrollo frontend”</p>
+            </section>
+            <section class="technology">
+               <ul class="list-tech">
+                  <ul>
+                     <li class="figma">
+                        <picture>
+                           <img src="./img/figma.png" alt="logo figma">
+                        </picture>
+                        <p>Figma</p>
+                     </li>
+                     <li class="javascript">
+                        <picture>
+                           <img src="./img/javascript.png" alt="logo javascript">
+                        </picture>
+                        <p>Javascript</p>
+                     </li>
+                  </ul>
+
+                  <ul>
+                     <li class="adobexd">
+                        <picture>
+                           <img src="./img/adobexd.png" alt="logo adobexd">
+                        </picture>
+                        <p>Adobe XD</p>
+                     </li>
+                     <li class="react">
+                        <picture>
+                           <img src="./img/react.png" alt="logo react">
+                        </picture>
+                        <p>React</p>
+                     </li>
+                  </ul>
+
+                  <ul>
+                     <li class="uxui">
+                        <picture>
+                           <img src="./img/uxui.png" alt="logo uxui">
+                        </picture>
+                        <p>UX/UI Designer</p>
+                     </li>
+                     <li class="kotlin">
+                        <picture>
+                           <img src="./img/kotlin.png" alt="logo kotli">
+                        </picture>
+                        <p>Kotlin</p>
+                     </li>
+                  </ul>
+               </ul>
+            </section>
          </section>
       </section>
+
       <!-- Fin Header -->
-      <section class="body">
-         <section class="social-media-group">
-            <section class="socialmedia">
+      <section class="body-cards">
+         <section class="so-med-group">
+            <section class="so-media">
                <h2>Mis Redes Sociales</h2>
-               <div class="card">
-                  <picture>
-                     <img src="./img/medium.png" alt="logo medium">
-                  </picture>
-                  <div class="title-card">
-                     <h4>Medium</h4>
-                     <p>/nickname</p>
+               <a href="">
+                  <div class="card">
+                     <picture>
+                        <img src="./img/medium.png" alt="logo medium">
+                     </picture>
+                     <div class="title-card">
+                        <h4>Medium</h4>
+                        <p>/nickname</p>
+                     </div>
                   </div>
-               </div>
-               <div class="card">
-                  <picture>
-                     <img src="./img/instagram.png" alt="logo instagram">
-                  </picture>
-                  <div class="title-card">
-                     <h4>Instagram</h4>
-                     <p>/nickname</p>
+               </a>
+               <a href="">
+                  <div class="card">
+                     <picture>
+                        <img src="./img/instagram.png" alt="logo instagram">
+                     </picture>
+                     <div class="title-card">
+                        <h4>Instagram</h4>
+                        <p>/nickname</p>
+                     </div>
                   </div>
-               </div>
-               <div class="card">
-                  <picture>
-                     <img src="./img/linkedin.png" alt="logo linkedin">
-                  </picture>
-                  <div class="title-card">
-                     <h4>LinkedIn</h4>
-                     <p>/nickname</p>
+               </a>
+               <a href="">
+                  <div class="card">
+                     <picture>
+                        <img src="./img/linkedin.png" alt="logo linkedin">
+                     </picture>
+                     <div class="title-card">
+                        <h4>LinkedIn</h4>
+                        <p>/nickname</p>
+                     </div>
                   </div>
-               </div>
+               </a>
             </section>
             <section class="design">
                <h2>Mis Diseños</h2>
-               <div class="card">
-                  <picture>
-                     <img src="./img/behance.png" alt="logo behance">
-                  </picture>
-                  <div class="title-card">
-                     <h4>Behance</h4>
-                     <p>/nickname</p>
+               <a href="">
+                  <div class="card">
+                     <picture>
+                        <img src="./img/behance.png" alt="logo behance">
+                     </picture>
+                     <div class="title-card">
+                        <h4>Behance</h4>
+                        <p>/nickname</p>
+                     </div>
                   </div>
-               </div>
-               <div class="card">
-                  <picture>
-                     <img src="./img/dribbble.png" alt="logo dribbble">
-                  </picture>
-                  <div class="title-card">
-                     <h4>Dribbble</h4>
-                     <p>/nickname</p>
+               </a>
+               <a href="">
+                  <div class="card">
+                     <picture>
+                        <img src="./img/dribbble.png" alt="logo dribbble">
+                     </picture>
+                     <div class="title-card">
+                        <h4>Dribbble</h4>
+                        <p>/nickname</p>
+                     </div>
                   </div>
-               </div>
+               </a>
             </section>
          </section>
          <!-- Section code  -->
          <section class="code-group">
             <section class="github">
                <h2>Mis códigos practicos</h2>
-               <div class="card">
-                  <picture>
-                     <img src="./img/github.png" alt="logo github">
-                  </picture>
-                  <div class="title-card">
-                     <h4>GitHub</h4>
-                     <p>/nickname</p>
+               <a href="">
+                  <div class="card">
+                     <picture>
+                        <img src="./img/github.png" alt="logo github">
+                     </picture>
+                     <div class="title-card">
+                        <h4>GitHub</h4>
+                        <p>/nickname</p>
+                     </div>
                   </div>
-               </div>
+               </a>
             </section>
             <section class="gitlab">
                <h2>Aportando conocimiento</h2>
-               <div class="card">
-                  <picture>
-                     <img src="./img/gitlab.png" alt="logo gitlab">
-                  </picture>
-                  <div class="title-card">
-                     <h4>GitLab</h4>
-                     <p>/nickname</p>
+               <a href="">
+                  <div class="card">
+                     <picture>
+                        <img src="./img/gitlab.png" alt="logo gitlab">
+                     </picture>
+                     <div class="title-card">
+                        <h4>GitLab</h4>
+                        <p>/nickname</p>
+                     </div>
                   </div>
-               </div>
+               </a>
             </section>
          </section>
       </section>
-      <footer>
-         <p>Rickert Luis - &copy; Copyright 2022</p>
-      </footer>
-   </main>
+   </section>
+   <footer>
+      <p>Rickert Luis Gonzales Ramírez- &copy; Copyright 2022</p>
+   </footer>
 </body>
 
 </html>
