cambio de tipografia

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                <p class="email">rickertgonzales@gmail.com</p>
             </section>
             <section class="text">
-               <p>“Amo el café, me ecanta el diseño y el desarrollo frontend”</p>
+               <p>“Amo el café, me encanta el diseño y el desarrollo frontend”</p>
             </section>
             <section class="technology">
                <ul class="list-tech">
@@ -83,61 +83,72 @@
          <section class="so-med-group">
             <section class="so-media">
                <h2>Mis Redes Sociales</h2>
-               <a href="">
-                  <div class="card">
-                     <picture>
-                        <img src="./img/medium.png" alt="logo medium">
-                     </picture>
-                     <div class="title-card">
-                        <h4>Medium</h4>
-                        <p>/nickname</p>
-                     </div>
-                  </div>
-               </a>
-               <a href="">
+               <a href="https://www.instagram.com/rickert.gonzalesramirez/">
                   <div class="card">
                      <picture>
                         <img src="./img/instagram.png" alt="logo instagram">
                      </picture>
                      <div class="title-card">
-                        <h4>Instagram</h4>
-                        <p>/nickname</p>
+                        <h4>UX/UI</h4>
+                        <p>/rickert.gonzalesramirez</p>
                      </div>
                   </div>
                </a>
-               <a href="">
+               <a href="https://www.instagram.com/rickert.dev/">
+                  <div class="card">
+                     <picture>
+                        <img src="./img/instagram.png" alt="logo instagram">
+                     </picture>
+                     <div class="title-card">
+                        <h4>Programación</h4>
+                        <p>/rickert.dev</p>
+                     </div>
+                  </div>
+               </a>
+               <a href="https://www.linkedin.com/in/rickert-gonzales/">
                   <div class="card">
                      <picture>
                         <img src="./img/linkedin.png" alt="logo linkedin">
                      </picture>
                      <div class="title-card">
                         <h4>LinkedIn</h4>
-                        <p>/nickname</p>
+                        <p>/rickert-gonzales</p>
+                     </div>
+                  </div>
+               </a>
+               <a href="https://medium.com/@rickertgonzales">
+                  <div class="card">
+                     <picture>
+                        <img src="./img/medium.png" alt="logo medium">
+                     </picture>
+                     <div class="title-card">
+                        <h4>Medium</h4>
+                        <p>/@rickert-gonzales</p>
                      </div>
                   </div>
                </a>
             </section>
             <section class="design">
                <h2>Mis Diseños</h2>
-               <a href="">
+               <a href="https://www.behance.net/rickertgonzales">
                   <div class="card">
                      <picture>
                         <img src="./img/behance.png" alt="logo behance">
                      </picture>
                      <div class="title-card">
                         <h4>Behance</h4>
-                        <p>/nickname</p>
+                        <p>/rickertgonzales</p>
                      </div>
                   </div>
                </a>
-               <a href="">
+               <a href="https://dribbble.com/Rickert-Gonzales">
                   <div class="card">
                      <picture>
                         <img src="./img/dribbble.png" alt="logo dribbble">
                      </picture>
                      <div class="title-card">
                         <h4>Dribbble</h4>
-                        <p>/nickname</p>
+                        <p>/Rickert-Gonzales</p>
                      </div>
                   </div>
                </a>
@@ -146,29 +157,29 @@
          <!-- Section code  -->
          <section class="code-group">
             <section class="github">
-               <h2>Mis códigos practicos</h2>
-               <a href="">
+               <h2>Mis códigos prácticos</h2>
+               <a href="https://github.com/Rickert-Gonzales">
                   <div class="card">
                      <picture>
                         <img src="./img/github.png" alt="logo github">
                      </picture>
                      <div class="title-card">
                         <h4>GitHub</h4>
-                        <p>/nickname</p>
+                        <p>/Rickert-Gonzales</p>
                      </div>
                   </div>
                </a>
             </section>
             <section class="gitlab">
                <h2>Aportando conocimiento</h2>
-               <a href="">
+               <a href="https://gitlab.com/rickertgonzales">
                   <div class="card">
                      <picture>
                         <img src="./img/gitlab.png" alt="logo gitlab">
                      </picture>
                      <div class="title-card">
-                        <h4>GitLab</h4>
-                        <p>/nickname</p>
+                        <h4>Bases Kotlin</h4>
+                        <p>/rickertgonzales</p>
                      </div>
                   </div>
                </a>
