Enlace a repositorio github

--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@
          <section class="code-group">
             <section class="github">
                <h2>Mis códigos prácticos</h2>
-               <a href="https://github.com/Rickert-Gonzales">
+               <a href="https://github.com/Rickert-Gonzales/Cohete_base">
                   <div class="card">
                      <picture>
                         <img src="./img/github.png" alt="logo github">
                      </picture>
                      <div class="title-card">
-                        <h4>GitHub</h4>
+                        <h4>Cohete Css</h4>
                         <p>/Rickert-Gonzales</p>
                      </div>
                   </div>
