correccion de errore e incorporacion de favcon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="icon" href="./img/favicon.png" type="image/png">
    <link rel="stylesheet" href="./styles.css">
    <title>Rickert Gonzales</title>
 </head>
@@ -116,7 +117,7 @@
                      </div>
                   </div>
                </a>
-               <a href="https://medium.com/@rickertgonzales">
+               <a href="https://medium.com/@rickert-gonzales">
                   <div class="card">
                      <picture>
                         <img src="./img/medium.png" alt="logo medium">
