Correccion de errores y mejora de lighthouse

--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="icon" href="./img/favicon.png" type="image/png">
-   <link rel="stylesheet" href="./styles.css">
+   <meta name="description" content="Hola👋,soy diseñador UX/UI, me gusta el
+                                    desarrollo frontend y amo el café☕.">
+   <!-- <link rel="icon" href="./img/favicon.png" type="image/png"> -->
+   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
    <title>Rickert Gonzales</title>
+   <link rel="stylesheet" href="./styles.css">
+
 </head>
 
 <body>
@@ -29,7 +33,7 @@
                <p>“Amo el café, me encanta el diseño y el desarrollo frontend”</p>
             </section>
             <section class="technology">
-               <ul class="list-tech">
+               <div class="list-tech">
                   <ul>
                      <li class="figma">
                         <picture>
@@ -74,7 +78,7 @@
                         <p>Kotlin</p>
                      </li>
                   </ul>
-               </ul>
+               </div>
             </section>
          </section>
       </section>
@@ -90,7 +94,7 @@
                         <img src="./img/instagram.png" alt="logo instagram">
                      </picture>
                      <div class="title-card">
-                        <h4>UX/UI</h4>
+                        <span>UX/UI</span>
                         <p>/rickert.gonzalesramirez</p>
                      </div>
                   </div>
@@ -101,7 +105,7 @@
                         <img src="./img/instagram.png" alt="logo instagram">
                      </picture>
                      <div class="title-card">
-                        <h4>Programación</h4>
+                        <span>Programación</span>
                         <p>/rickert.dev</p>
                      </div>
                   </div>
@@ -112,7 +116,7 @@
                         <img src="./img/linkedin.png" alt="logo linkedin">
                      </picture>
                      <div class="title-card">
-                        <h4>LinkedIn</h4>
+                        <span>LinkedIn</span>
                         <p>/rickert-gonzales</p>
                      </div>
                   </div>
@@ -123,7 +127,7 @@
                         <img src="./img/medium.png" alt="logo medium">
                      </picture>
                      <div class="title-card">
-                        <h4>Medium</h4>
+                        <span>Medium</span>
                         <p>/@rickert-gonzales</p>
                      </div>
                   </div>
@@ -137,7 +141,7 @@
                         <img src="./img/behance.png" alt="logo behance">
                      </picture>
                      <div class="title-card">
-                        <h4>Behance</h4>
+                        <span>Behance</span>
                         <p>/rickertgonzales</p>
                      </div>
                   </div>
@@ -148,7 +152,7 @@
                         <img src="./img/dribbble.png" alt="logo dribbble">
                      </picture>
                      <div class="title-card">
-                        <h4>Dribbble</h4>
+                        <span>Dribbble</span>
                         <p>/Rickert-Gonzales</p>
                      </div>
                   </div>
@@ -165,7 +169,7 @@
                         <img src="./img/github.png" alt="logo github">
                      </picture>
                      <div class="title-card">
-                        <h4>Cohete Css</h4>
+                        <span>Cohete Css</span>
                         <p>/Rickert-Gonzales</p>
                      </div>
                   </div>
@@ -179,7 +183,7 @@
                         <img src="./img/gitlab.png" alt="logo gitlab">
                      </picture>
                      <div class="title-card">
-                        <h4>Bases Kotlin</h4>
+                        <span>Bases Kotlin</span>
                         <p>/rickertgonzales</p>
                      </div>
                   </div>
